# lua-ffi-generator

./: CMakeLists.txt  Makefile  README.md  ffigen.c  make_lua_ffi.pl
cmake/: FFIWrap.cmake
debian/: changelog  control
